syntax = "proto3";
package web;

option go_package = "open/v1;open";

import "validate/validate.proto";

message IndexRequest{
  int32 group_id = 1 [(validate.rules).int32.gte = 1];
  int32 user_id = 2 [(validate.rules).int32.gte = 1];
}