syntax = "proto3";
package web;

option go_package = "web/v1;web";

import "validate/validate.proto";


// 联系人分组列表接口请求参数
message ContactGroupListRequest{}

// 联系人分组列表接口响应参数
message ContactGroupListResponse{
  message Item{
    // 分组ID
    int32 id = 1;
    // 分组名称
    string name = 2;
    // 联系人数
    int32 count = 3;
    // 分组排序
    int32 sort = 4;
  }

  // 分组列表
  repeated Item items = 1;
}

message ContactGroupSaveRequest{
  message Item{
    int32 id = 1 [(validate.rules).int32.gte = 0];
    int32 sort = 2 [(validate.rules).int32.gt = 0];
    string name = 3 [(validate.rules).string.min_len = 1];
  }

  repeated Item items = 1;
}

message ContactGroupSaveResponse{}